k8s/mq-poc-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  labels:
    app: publisher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
    spec:
      imagePullSecrets:
        - name: app-docker-dev
      containers:
      - name: publisher
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
