k8s/mq-poc-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeworker
  labels:
    app: nodeworker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeworker
  template:
    metadata:
      labels:
        app: nodeworker
    spec:
      imagePullSecrets:
        - name: app-docker-dev
      containers:
      - name: nodeworker
        image: dog830228/mq_poc-nodeworker
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 300Mi
