k8s/mq-poc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend: ## to service
          service:
            name: rabbitmq-server
            port:
              number: 15672
